--- a/paper-table.html
+++ b/paper-table.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="bower_components/paper-styles/typography.html">
+<link rel="import" href="../paper-styles/typography.html">
 
 <!--
 A material design <a href="https://www.google.com/design/spec/components/data-tables.html" target="_blank">data table</a>.
