Add min-width for icons.

--- a/paper-td.html
+++ b/paper-td.html
@@ -54,6 +54,8 @@ Example:
       iron-icon {
         width: 18px;
         height: 18px;
+        min-width: 18px;
+        min-height: 18px;
         color: rgba(0, 0, 0, .54);
         margin-top: 15px;
         text-align: right;
