--- a/paper-td.html
+++ b/paper-td.html
@@ -9,12 +9,21 @@
 <link rel="import" href="../paper-input/paper-input.html">
 
 <!--
-A material design <a href="https://www.google.com/design/spec/components/data-tables.html" target="_blank">data table</a>.
+Table cell for paper-table.
 
 
 Example:
 
-    <paper-tr></paper-tr>
+    <paper-td>Bananas</paper-td>
+
+For numerical data use
+
+    <paper-td number>1.3</paper-td>
+
+Add editable tag to make the cell editable. Adding large will cause the edit dialog to have a header and buttons.
+
+    <paper-td editable>Edit me!</paper-td>
+    <paper-td editable large>Edit me in a large dialog!</paper-td>
 
 @group UnwrittenElements
 @element paper-table
@@ -57,7 +66,6 @@ Example:
         min-width: 18px;
         min-height: 18px;
         color: rgba(0, 0, 0, .54);
-        margin-top: 15px;
         text-align: right;
         margin-left: 24px;
       }
@@ -106,7 +114,7 @@ Example:
     <div id="dialog" hidden>
       <div class="content">
         <h2 hidden="{{ !large }}">Edit</h2>
-        <paper-input no-label-float on-keydown="enterSave"></paper-input>
+        <paper-input no-label-float on-keydown="_enterSave"></paper-input>
       </div>
       <div class="actions" hidden="{{ !large }}">
         <span flex></span>
@@ -122,20 +130,35 @@ Example:
   Polymer({
     is: 'paper-td',
     properties: {
+
+      /**
+       * True to right-align the data.
+       */
       number: {
         type: Boolean,
         value: false
       },
+
+      /**
+       * Show an edit dialog to change the data.
+       */
       editable: {
         type: Boolean,
         value: false
       },
+
+      /**
+       * Give the edit dialog a header and buttons.
+       */
       large: {
         type: Boolean,
         value: false
       }
     },
 
+    /**
+     * Shows the edit dialog.
+     */
     edit: function () {
       var dialog = this.$.dialog;
       dialog.hidden = false;
@@ -146,10 +169,16 @@ Example:
       dialog.querySelector("paper-input").value = this.$.text.innerText.trim();
     },
 
+    /**
+     * Closes the edit dialog
+     */
     close: function () {
       this.$.dialog.hidden = true;
     },
 
+    /**
+     * Called to save the text in the dialog
+     */
     save: function () {
       var dialog = this.$.dialog;
       var newText = dialog.querySelector("paper-input").value;
@@ -158,7 +187,7 @@ Example:
       this.close();
     },
 
-    enterSave: function (e) {
+    _enterSave: function (e) {
       if (!this.large && e.keyCode === 13) {
         this.save();
       } else if (e.keyCode === 27) {
