--- a/demo/index.html
+++ b/demo/index.html
@@ -21,6 +21,10 @@
       * {
         --default-primary-color: var(--google-blue-500);
       }
+
+      paper-card {
+        margin-bottom: 50px;
+      }
     </style>
   </head>
   <body unresolved>
@@ -33,7 +37,9 @@
           <paper-icon-button icon="more-vert"></paper-icon-button>
         </div>
         <div thead>
-          <paper-td><paper-checkbox noink></paper-checkbox></paper-td>
+          <paper-td>
+            <paper-checkbox noink></paper-checkbox>
+          </paper-td>
           <paper-td>Dessert (100g serving)</paper-td>
           <paper-td number>Calories</paper-td>
           <paper-td number>Fat (g)</paper-td>
@@ -45,7 +51,9 @@
         </div>
         <div body>
           <paper-tr>
-            <paper-td><paper-checkbox noink></paper-checkbox></paper-td>
+            <paper-td>
+              <paper-checkbox noink></paper-checkbox>
+            </paper-td>
             <paper-td editable>Frozen yogurt</paper-td>
             <paper-td number>159</paper-td>
             <paper-td number>6.0</paper-td>
@@ -56,7 +64,9 @@
             <paper-td number>1%</paper-td>
           </paper-tr>
           <paper-tr>
-            <paper-td><paper-checkbox noink></paper-checkbox></paper-td>
+            <paper-td>
+              <paper-checkbox noink></paper-checkbox>
+            </paper-td>
             <paper-td editable large>Ice cream sandwich</paper-td>
             <paper-td number>237</paper-td>
             <paper-td number>9.0</paper-td>
@@ -67,7 +77,9 @@
             <paper-td number>1%</paper-td>
           </paper-tr>
           <paper-tr>
-            <paper-td><paper-checkbox noink></paper-checkbox></paper-td>
+            <paper-td>
+              <paper-checkbox noink></paper-checkbox>
+            </paper-td>
             <paper-td editable>Eclair</paper-td>
             <paper-td number>262</paper-td>
             <paper-td number>16.0</paper-td>
@@ -78,7 +90,9 @@
             <paper-td number>7%</paper-td>
           </paper-tr>
           <paper-tr>
-            <paper-td><paper-checkbox noink></paper-checkbox></paper-td>
+            <paper-td>
+              <paper-checkbox noink></paper-checkbox>
+            </paper-td>
             <paper-td editable>Cupcake</paper-td>
             <paper-td number>305</paper-td>
             <paper-td number>3.7</paper-td>
@@ -89,7 +103,9 @@
             <paper-td number>8%</paper-td>
           </paper-tr>
           <paper-tr>
-            <paper-td><paper-checkbox noink></paper-checkbox></paper-td>
+            <paper-td>
+              <paper-checkbox noink></paper-checkbox>
+            </paper-td>
             <paper-td editable>Gingerbread</paper-td>
             <paper-td number>375</paper-td>
             <paper-td number>16.0</paper-td>
