--- a/paper-tr.html
+++ b/paper-tr.html
@@ -1,12 +1,15 @@
 <link rel="import" href="../polymer/polymer.html">
 
 <!--
-A material design <a href="https://www.google.com/design/spec/components/data-tables.html" target="_blank">data table</a>.
-
+Table row for paper-table.
 
 Example:
 
-    <paper-tr></paper-tr>
+    <paper-tr>
+      <paper-td>..</paper-td>
+      <paper-td>..</paper-td>
+      <paper-td>..</paper-td>
+    </paper-tr>
 
 @group UnwrittenElements
 @element paper-table
@@ -17,8 +20,6 @@ Example:
     <style>
       :host {
         display: table-row;
-        height: 48px;
-        line-height: 48px;
       }
 
       :host:last-child {
@@ -31,6 +32,11 @@ Example:
 
       :host:hover {
         background: var(--paper-grey-200)
+      }
+
+      :host ::content > * {
+        padding-top: 15px;
+        padding-bottom: 15px;
       }
     </style>
 
