--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="import" href="../iron-component-page/iron-component-page.html">
   </head>
   <body unresolved>
-      <iron-component-page></iron-component-page>
+      <iron-component-page src="all.html"></iron-component-page>
   </body>
 </html>
