Start on table-data-table from json.

--- a/all.html
+++ b/all.html
@@ -1,4 +1,5 @@
 <link rel="import" href="paper-table.html">
+<link rel="import" href="paper-data-table.html">
 <link rel="import" href="paper-tr.html">
 <link rel="import" href="paper-td.html">
 <link rel="import" href="paper-table-dropdown.html">
